# bazel-ts-js-jest

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  jest.bzl  package.json  tsconfig.json
